--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   json_annotation: ^4.8.1
   cloud_firestore_odm: ^1.0.0-dev.71
   reactive_forms: ^16.1.1
+  reactive_date_time_picker: ^3.0.0
 
 dev_dependencies:
   flutter_test:
