--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   loggy: ^2.0.3
   json_annotation: ^4.8.1
   cloud_firestore_odm: ^1.0.0-dev.71
-  reactive_forms: ^16.1.1
+ive_forms: ^16.1.1
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +26,7 @@ dev_dependencies:
   build_runner: ^2.4.3
   json_serializable: ^6.7.1
   cloud_firestore_odm_generator: ^1.0.0-dev.58
+  reactive_date_time_picker: ^3.0.0
 
 dependency_overrides:
   graphs: 2.2.0
