--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,12 @@ dependencies:
   cloud_firestore_odm: ^1.0.0-dev.71
   reactive_forms: ^16.1.1
   reactive_date_time_picker: ^3.0.0
+  adaptive_breakpoints: ^0.1.6
+  dual_screen: ^1.0.4
+  animations: ^2.0.8
+  transparent_image: ^2.0.1
+  google_fonts: ^6.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
