--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,8 @@ dependency_overrides:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/
   # fonts:
   #   - family: Schyler
   #     fonts:
