--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   image_picker: ^1.0.4
   firebase_storage: ^11.4.1
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
