--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "hello_world",
-    "short_name": "hello_world",
+    "name": "CalendAPP",
+    "short_name": "CalendAPP",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
